# DrinkOrder

./: .env.example  .gitignore  README.md  SPEC.md  pyproject.toml  zeabur.json
app/: __init__.py  config.py  models.py
app/routes/: __init__.py  admin.py  api.py  main.py
app/services/: __init__.py  event_service.py  order_service.py  shop_service.py
app/static/css/: style.css
app/static/js/: admin.js  main.js  order.js
app/templates/: base.html  confirm.html  index.html  menu.html  order.html
app/templates/admin/: events.html  import_menu.html  orders.html  shops.html
data/: sample_menu.json
