[project]
name = "drink-order"
version = "0.1.0"
description = "動物森友會風格的內部員工飲料團購系統"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "flask-sqlalchemy>=3.1.0",
    "flask-migrate>=4.0.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.0",
    "gunicorn>=23.0.0; sys_platform != 'win32'",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-flask>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
